Fix styling bugs and improve component appearance - Corrected CSS variable usage - Enhanced dark mode visuals

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,7 +5,7 @@
     --input-text-color: black;
     --button-background-color: rgb(116, 218, 218);
     --button-text-color: black;
-    --button-hover-background-color: black;
+    --button-hover-background-color: white;
     --button-hover-text-color: rgb(116, 218, 218);
 }
 
@@ -13,11 +13,11 @@
     :root {
         --background-color: #121212;
         --text-color: #f4f4f4;
-        --input-background-color: #444444;
+        --input-background-color: #2e2c2c;
         --input-text-color: #f4f4f4;
         --button-background-color: rgb(116, 218, 218);
         --button-text-color: black;
-        --button-hover-background-color: black;
+        --button-hover-background-color: white;
         --button-hover-text-color: rgb(116, 218, 218);
     }
 }
