--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -5,7 +5,7 @@
     --input-text-color: black;
     --button-background-color: rgb(116, 218, 218);
     --button-text-color: black;
-    --button-hover-background-color: black;
+    --button-hover-background-color: white;
     --button-hover-text-color: rgb(116, 218, 218);
     --form-container-bg: white;
 }
@@ -14,11 +14,11 @@
     :root {
         --background-color: #333;
         --text-color: #f4f4f4;
-        --input-background-color: #444444;
+        --input-background-color: #2e2c2c;
         --input-text-color: #f4f4f4;
         --button-background-color: rgb(116, 218, 218);
         --button-text-color: black;
-        --button-hover-background-color: black;
+        --button-hover-background-color: white;
         --button-hover-text-color: rgb(116, 218, 218);
         --form-container-bg: #121212;
     }
